@@ -1,3 +1,9 @@
+2020-06-29  Allen D. Ball  <ball@hcf.dev>
+
+	* Re-factored Device and Service to Device, AnnotatedDevice, and
+	AbstractDevice and Service, AnnotatedService, and AbstractService,
+	respectively.
+
 2020-06-28  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ball/upnp/Templated.java,
